Pass filter to remote instance for queries Clean up creating range request path